--- a/GraphQL_API/server/package.json
+++ b/GraphQL_API/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +13,7 @@
     "express": "^4.18.3",
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.1",
+    "lodash": "^4.17.21",
     "react-apollo": "^3.1.5"
   }
 }
