--- a/GraphQL_API/server/package.json
+++ b/GraphQL_API/server/package.json
@@ -14,6 +14,8 @@
     "express-graphql": "^0.12.0",
     "graphql": "^16.8.1",
     "lodash": "^4.17.21",
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.11.19",
     "react-apollo": "^3.1.5"
   }
 }
